2011-02-22  Charlie Zender  <zender@uci.edu>

	* Yet more nco_aux.c clean-up

	* Exit with error when nco_aux_evl() finds no coordinates in bounding-box
	This fixes most the rest of TODO nco1007. Only remaining task is
	to (like regular hyperslabs) return nearest point when
	lat_min=lat_max and/or lon_min=lon_max.

	* Clean-up nco_aux.c and most of its functional interfaces

2011-02-21  Charlie Zender  <zender@uci.edu>

	* TODO nco1007 now mitigated so that failure occurs only with auxiliary coordinates

	* Remove two ncks tests from NCO_rgr.pm.
	Should add them back once script allows error exit to be intended result.

	* Threaded needle with new fix so wrapped hyperslabs work as before

	* Added partial fix to TODO nco1007 that now breaks double-wrapped hypserslab test

	* Replace nco_get_vara() with nc_get_vara_double() in nco_lmt_evl()

	* Clean-up, add diagnostics to nco_lmt_evl() while working to fix TODO nco1007

2011-02-17  Charlie Zender  <zender@uci.edu>

	* Change scp paths from greenplanet to gplogin2

2011-02-12  Charlie Zender  <zender@uci.edu>

	* Migrate from old sourceforge (SF) paths, e.g.,
	/home/groups/n/nc/nco/htdocs/index.shtml
	to new paths, e.g.,
	/home/project-web/nco/htdocs/index.shtml

2011-02-03  Charlie Zender  <zender@uci.edu>

	* Change ndrv from 65534 to 65532 as per Griffith Young

2011-01-18  Charlie Zender  <zender@uci.edu>

	* NCO 4.0.7 release procedure:
 	Changes since nco-4_0_6:
	cd ~/nco;cvs tag -d nco-4_0_7;cvs tag -d nco-4_0_7-1
	cd ~/nco;cvs commit -m "Preparing nco-4.0.7 release"
	cvs tag -c nco-4_0_7;cvs tag -c nco-4_0_7-1

	* Fix NC_MAX_BYTE typo in nco.h which affected nco_pck.c

2011-01-16  Charlie Zender  <zender@uci.edu>

	* Tidy ncatted.c, ncrename.c

	* Add helpful debugging output to nco_aed_prc()

2011-01-14  Charlie Zender  <zender@uci.edu>

	* NCO 4.0.6 release procedure:
 	Changes since nco-4_0_5: clang, YYYYMMDD-averaging, xtr ass crd
	cd ~/nco;cvs tag -d nco-4_0_6;cvs tag -d nco-4_0_6-1